[gd_scene load_steps=17 format=2]

[ext_resource path="res://art/ui/backgrounds/bg_space.png" type="Texture" id=1]
[ext_resource path="res://scenes/TopUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/BottomUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=4]
[ext_resource path="res://scenes/Sinker.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HintEffect.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/IceHolder.gd" type="Script" id=7]
[ext_resource path="res://scripts/LockHolder.gd" type="Script" id=8]
[ext_resource path="res://scripts/ConcreteHolder.gd" type="Script" id=9]
[ext_resource path="res://scripts/SlimeHolder.gd" type="Script" id=10]
[ext_resource path="res://scenes/GameOverPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/GameWinPanel.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/GoalHolder.gd" type="Script" id=13]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=14]
[ext_resource path="res://art/obstacles/Ice.png" type="Texture" id=15]
[ext_resource path="res://scenes/PausePanel.tscn" type="PackedScene" id=16]

[node name="GameWindow" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 1 )

[node name="TopUI" parent="." instance=ExtResource( 2 )]

[node name="BottomUI" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
margin_bottom = 1024.0

[node name="ColorBombTimer" type="Timer" parent="BottomUI"]
wait_time = 2.0
one_shot = true

[node name="Grid" type="Node2D" parent="."]
position = Vector2( 0, 1 )
script = ExtResource( 4 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = -2
max_piece_types = 4
empty_spaces = PoolVector2Array( 0, 0, 1, 0, 2, 0, 0, 1, 0, 2, 5, 9, 1, 1, 0, 9, 0, 8, 0, 7, 1, 9, 1, 8, 2, 9, 7, 0, 6, 0, 5, 0, 7, 1, 6, 1, 7, 2, 7, 9, 7, 8, 7, 7, 6, 9, 6, 8 )
ice_spaces = PoolVector2Array( 0, 3, 0, 6, 7, 3, 7, 6 )
max_score = 3000
piece_value = 20
current_counter_value = 5
is_moves = true
sinker_piece = ExtResource( 5 )
hint_effect = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Grid"]

[node name="ShuffleTimer" type="Timer" parent="Grid"]
wait_time = 0.5
one_shot = true

[node name="HintTimer" type="Timer" parent="Grid"]
wait_time = 0.5
one_shot = true

[node name="IceHolder" type="Node2D" parent="."]
script = ExtResource( 7 )
value = "ice"

[node name="LockHolder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="ConcreteHolder" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="SlimeHolder" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CollapseTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="RefillTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="GameOverPanel" parent="." instance=ExtResource( 11 )]
offset = Vector2( 576, -200 )
transform = Transform2D( 1, 0, 0, 1, 576, -200 )

[node name="GameWinPanel" parent="." instance=ExtResource( 12 )]
offset = Vector2( 576, -200 )
transform = Transform2D( 1, 0, 0, 1, 576, -200 )

[node name="GoalHolder" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Goal" parent="GoalHolder" instance=ExtResource( 14 )]
goal_texture = ExtResource( 15 )
max_needed = 4
goal_string = "ice"

[node name="PausePanel" parent="." instance=ExtResource( 16 )]
offset = Vector2( 576, -200 )
transform = Transform2D( 1, 0, 0, 1, 576, -200 )

[connection signal="final_score" from="TopUI" to="GameWinPanel" method="_on_TopUI_final_score"]
[connection signal="pause_game" from="BottomUI" to="PausePanel" method="_on_BottomUI_pause_game"]
[connection signal="random_color_bomb" from="BottomUI" to="Grid" method="_on_BottomUI_random_color_bomb"]
[connection signal="timeout" from="BottomUI/ColorBombTimer" to="BottomUI" method="_on_ColorBombTimer_timeout"]
[connection signal="check_goal" from="Grid" to="TopUI" method="_on_Grid_check_goal"]
[connection signal="check_goal" from="Grid" to="GoalHolder" method="_on_Grid_check_goal"]
[connection signal="damage_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_damage_concrete"]
[connection signal="damage_ice" from="Grid" to="IceHolder" method="_on_Grid_damage_ice"]
[connection signal="damage_lock" from="Grid" to="LockHolder" method="_on_Grid_damage_lock"]
[connection signal="damage_slime" from="Grid" to="SlimeHolder" method="_on_Grid_damage_slime"]
[connection signal="game_over" from="Grid" to="GameOverPanel" method="_on_Grid_game_over"]
[connection signal="game_over" from="Grid" to="BottomUI" method="_on_Grid_game_over"]
[connection signal="make_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_make_concrete"]
[connection signal="make_ice" from="Grid" to="IceHolder" method="_on_Grid_make_ice"]
[connection signal="make_lock" from="Grid" to="LockHolder" method="_on_Grid_make_lock"]
[connection signal="make_slime" from="Grid" to="SlimeHolder" method="_on_Grid_make_slime"]
[connection signal="maximum_streak_reached" from="Grid" to="Grid" method="_on_Grid_maximum_streak_reached"]
[connection signal="open_game_win_panel" from="Grid" to="GameWinPanel" method="_on_Grid_open_game_win_panel"]
[connection signal="open_game_win_panel" from="Grid" to="TopUI" method="_on_Grid_open_game_win_panel"]
[connection signal="print_positive_message" from="Grid" to="BottomUI" method="_on_Grid_print_positive_message"]
[connection signal="setup_max_score" from="Grid" to="TopUI" method="_on_Grid_setup_max_score"]
[connection signal="update_counter" from="Grid" to="TopUI" method="_on_Grid_update_counter"]
[connection signal="update_score" from="Grid" to="TopUI" method="_on_Grid_update_score"]
[connection signal="timeout" from="Grid/Timer" to="Grid" method="_on_Timer_timeout"]
[connection signal="timeout" from="Grid/ShuffleTimer" to="Grid" method="_on_ShuffleTimer_timeout"]
[connection signal="timeout" from="Grid/HintTimer" to="Grid" method="_on_HintTimer_timeout"]
[connection signal="break_ice" from="IceHolder" to="TopUI" method="_on_IceHolder_break_ice"]
[connection signal="break_ice" from="IceHolder" to="GoalHolder" method="_on_IceHolder_break_ice"]
[connection signal="remove_lock" from="LockHolder" to="Grid" method="_on_LockHolder_remove_lock"]
[connection signal="remove_concrete" from="ConcreteHolder" to="Grid" method="_on_ConcreteHolder_remove_concrete"]
[connection signal="remove_slime" from="SlimeHolder" to="Grid" method="_on_SlimeHolder_remove_slime"]
[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_DestroyTimer_timeout"]
[connection signal="timeout" from="CollapseTimer" to="Grid" method="_on_CollapseTimer_timeout"]
[connection signal="timeout" from="RefillTimer" to="Grid" method="_on_RefillTimer_timeout"]
[connection signal="create_goal" from="GoalHolder" to="TopUI" method="_on_GoalHolder_create_goal"]
[connection signal="game_win" from="GoalHolder" to="Grid" method="_on_GoalHolder_game_win"]
